--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
-
+<!-- 
 <div id="myPaypalButtons"></div>
 
 
-<div class="cool">cool</div>
+<div class="cool">cool</div> -->
