--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Convergence&family=Secular+One&family=Varela+Round&display=swap');
 $marine-color: #000083;
 $blue-sky: #22B5F0;
+$nav-blue: rgb(155, 208, 255);
 
 .login-container {
     overflow-y: scroll;
-    background-color: rgb(194, 228, 228);
+    background-color: $nav-blue; //rgb(194, 228, 228);
     height: 100vh;
 
     .login-box {
