--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,16 +7,27 @@
 
         <div class="create-account">
 
-            <div class="text-side">
-                <h2 class="title">Démarrer</h2>
-                <p class="text">Créez un compte pour bénéficier de tarifs préférentiels et vendre vos livres</p>
-                <p class="button-container" routerLink="/register"><button>Créer un compte</button></p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+    
+                        <div class="text-side">
+                            <h2 class="title">Démarrer</h2>
+                            <p class="text">Créez un compte pour bénéficier de tarifs préférentiels et vendre vos livres</p>
+                            <p class="button-container" routerLink="/register"><button>Créer un compte</button></p>
+                        </div>
+                    </div>
+    
+    
+                    <div class="col-lg-6 col-md-12 d-flex justify-content-md-center justify-content-lg-end">
+    
+                        <div class="img-container">
+                            <img src="../../../assets/images/gulfer-ergin-LUGuCtvlk1Q-unsplash.jpg" alt="">
+                        </div>
+    
+                    </div>
+                </div>
             </div>
-
-            <div class="img-container">
-                <img src="../../../assets/images/gulfer-ergin-LUGuCtvlk1Q-unsplash.jpg" alt="">
-            </div>
-            
 
         </div>
 
