--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,7 @@ $marine-color: #000083;
     display: flex;
     color: white;
     background: linear-gradient(to bottom right, #BD34C6, #8E0A96);
-    height: 300px;
+    // height: 300px;
     padding: 30px 60px;
 
     .text-side {
@@ -42,16 +42,29 @@ $marine-color: #000083;
     }
 
     .img-container {
-        flex: 1;
-        display: flex;
-        justify-content:center;
-        align-items: center;
 
         img {
             width: 300px;    
         }
 
     } 
-
-
 }
+
+
+@media (max-width:992px) {
+    .create-account {
+    
+        .text-side {
+    
+            .button-container {
+                text-align: center;
+                margin-bottom: 50px;
+    
+            }
+    
+        }
+    
+
+    }
+    
+ }
