--- a/src/app/tools/navbar/navbar.component.html
+++ b/src/app/tools/navbar/navbar.component.html
@@ -1,12 +1,11 @@
 <div class="navbar-container">
-
-    <div class="nav-top d-flex align-items-center justify-content-between">
+    <div class="nav-top">
         <div class="nav-top-left d-flex align-items-baseline">
             <img src="../../../assets/images/PeterM-Feather-2.svg" alt="">
             <a class="logo" routerLink=""><span>Bookstore</span></a>
             <a routerLink="/product-list" class="font-size-1">Produits</a>
         </div>
-        <div class="nav-top-right d-flex">
+        <div class="nav-top-right">
             <div class="btn-container search-container" (click)="openSearch=!openSearch" 
             [ngClass]="{'focus-button': openSearch == true}">
                 <button class="search-btn" ><i
