--- a/src/app/tools/navbar/navbar.component.scss
+++ b/src/app/tools/navbar/navbar.component.scss
@@ -7,7 +7,9 @@
 }
 
 $marine-color: #000083;
-
+// $marine-color: rgb(0, 0, 84);
+$nav-blue: rgb(155, 208, 255);
+$dark-blue: rgb(0, 0, 84);
 
 a {
     color: $marine-color;
@@ -26,8 +28,12 @@ a {
 
 
 .nav-top {
-    height: 70px;
-    padding: 40px 30px;
+    // d-flex align-items-center justify-content-between
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    // height: 70px;
+    padding: 20px 30px;
     background-color: rgb(155, 208, 255);
 
     .nav-top-left {
@@ -56,6 +62,7 @@ a {
 
 
     .nav-top-right {
+        display: flex;
         .btn-container {
             cursor: pointer;
 
@@ -157,9 +164,9 @@ a {
 .nav-bottom {
     .nav-search {
         height: 110px;
-        background-color: $marine-color;
+        background-color: $dark-blue;
 
-        >* {
+        > * {
             margin: 0 15px;
         }
 
@@ -197,14 +204,40 @@ a {
         >* {
             margin: 10px 0;
         }
+    }
+}
 
 
+@media (max-width:800px) {
+    .nav-top {
+        display: block;
 
-        // > * {
-        //     flex-grow: 1;
-        //     > :last-child {margin: 0;}
-        // }
+        .nav-top-left {
+            padding: 0;
+            margin-bottom: 50px;
+    
+            a {
+                font-size: 1.8em;
+    
+            }
+    
+            img {
+                display: none;
+            }
+        }
+
+        .nav-top-right {
+            justify-content: space-between;
+        }
     }
 
 
-}
+    .nav-bottom {
+        .nav-categories {
+            padding: 0 30px;
+            display: block;
+            font-size: 1.2em;
+            height: auto;
+        }
+    }
+ }
