--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -22,7 +22,7 @@
 
 
                 <div class="product-cart">
-                    <div class="img-container"><img src="https://picsum.photos/200/300"></div>
+                    <div class="img-container"><img src="assets/images/image_books/{{productCart.product.img_url}}"></div>
                     <div class="logo"><i class="fa-solid fa-book"></i></div>
                     <div class="price-product">EUR {{productCart.product.price}}</div>
                     <div class="quantity">
