--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -31,11 +31,13 @@
 
         </div>
 
-
     </div>
 
 </div>
 
-
+<!-- <div>
+    <img src="assets/images/gulfer-ergin-LUGuCtvlk1Q-unsplash.jpg" alt="">
+</div> -->
 
 <app-footer></app-footer>
+
