--- a/src/app/tools/footer/footer.component.html
+++ b/src/app/tools/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mb-3">
                 <!-- Contact Info-->
                 <section class="widget widget-light-skin">
                     <h3 class="widget-title">Contact</h3>
@@ -23,7 +23,7 @@
             </div>
 
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mb-3">
                 <!-- About Us-->
                 <section class="widget widget-links widget-light-skin">
                     <h3 class="widget-title">Besoin d'aide</h3>
@@ -39,7 +39,7 @@
                 </section>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mb-3">
                 <!-- About Us-->
                 <section class="widget widget-links widget-light-skin">
                     <h3 class="widget-title">A propos</h3>
@@ -54,7 +54,7 @@
                     </ul>
                 </section>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-3 col-md-6 mb-3">
                 <!-- Account / Shipping Info-->
                 <section class="widget widget-links widget-light-skin">
                     <h3 class="widget-title">Compte</h3>
