--- a/src/app/tools/navbar/navbar.component.scss
+++ b/src/app/tools/navbar/navbar.component.scss
@@ -164,7 +164,7 @@ a {
 .nav-bottom {
     .nav-search {
         height: 110px;
-        background-color: $dark-blue;
+        background-color: $marine-color;
 
         > * {
             margin: 0 15px;
