--- a/src/app/pages/product-detail/product-detail.component.scss
+++ b/src/app/pages/product-detail/product-detail.component.scss
@@ -4,17 +4,27 @@ $marine-color: #000083;
 $blue-sky: #22B5F0;
 
 .product-detail-container {
+    
+    width: 90%;
+    margin: 0 auto;
 
-    padding-top: 80px;
+    padding: 80px 0;
 
 
     .img-container {
         margin-right: 10px;
+        width: 250px;
+        height: 375px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
 
     .block1 {
-        
+
         padding-top: 5px;
 
         .title {
@@ -27,6 +37,7 @@ $blue-sky: #22B5F0;
             margin-bottom: 20px;
             font-size: 1.4em;
             color: grey;
+
             img {
                 width: 30px;
                 margin-right: 10px;
@@ -55,7 +66,7 @@ $blue-sky: #22B5F0;
 
                 &:hover {
                     color: $blue-sky;
-                } 
+                }
 
             }
         }
@@ -81,22 +92,27 @@ $blue-sky: #22B5F0;
 
     .block2 {
 
-        margin-top: 80px;
-        padding-left: 200px;
+        margin-top: 80px 0;
+        // width: 80%;
 
         .description {
+            text-align: center;
             color: grey;
             font-size: 1.2em;
+            margin-bottom: 80px;
         }
 
         .block3 {
-            margin-top: 80px;
-            display: flex;
 
-            .details-block, .properties-block {        
+            .details-block,
+            .properties-block {
+
+                padding: 0 30px;
+                margin-bottom: 40px;
 
                 .text {
                     display: flex;
+                    justify-content: space-between;
                     align-items: baseline;
                     font-size: 0.9em;
                     color: rgb(83, 83, 83);
@@ -120,14 +136,14 @@ $blue-sky: #22B5F0;
                     font-size: 1.3em;
                 }
 
-                width: 600px;
+                // width: 600px;
                 // background-color: azure;
 
             }
 
             .properties-block {
 
-                width: 600px;
+                // width: 600px;
                 // background-color: beige;
 
             }
@@ -136,8 +152,45 @@ $blue-sky: #22B5F0;
 
         }
     }
+}
 
 
+
+
+// RESPONSIVE PART
+@media (max-width:800px) {
+
+    .product-detail-container {
+
+        padding: 80px 0;
+
+
+        .img-container {
+            margin-right: 10px;
+            width: 200px;
+            height: 300px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+
+        .block1 {
+
+            .title {
+                font-size: 1.5em;
+            }
+        }
+
+
+        .block2 {
+            
+        }
+
+
+    }
 
 
 }
