--- a/src/app/pages/failure-payment/failure-payment.component.html
+++ b/src/app/pages/failure-payment/failure-payment.component.html
@@ -1,1 +1,21 @@
-<p>failure-payment works!</p>
+<app-navbar></app-navbar>
+
+<div class="failure-payment">
+
+
+    <div class="container">
+
+        <div class="block">
+            <p class="title">ECHEC DE LA COMMANDE</p>
+            <p>Le paiement de votre commande a échoué.</p>
+        </div>
+
+        <div class="actions">
+            <button routerLink=""><i class="fa-solid fa-circle-left"></i><span>Retour accueil</span></button>
+        </div>
+
+    </div>
+
+</div>
+
+<app-footer></app-footer>
