--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -102,6 +102,7 @@ $light-grey: #dedede;
                         width: 200px;
                         height: 300px;
                         overflow: hidden;
+                        // background-color: beige
     
                         img {
                             width: 200px;
