--- a/src/app/pages/product-detail/product-detail.component.scss
+++ b/src/app/pages/product-detail/product-detail.component.scss
@@ -187,7 +187,10 @@ $star-inactive : rgb(115, 115, 0);
         .eval-input-text {
             height: 200px;
 
-            textarea {height: 100%;  resize: none;}
+            textarea {
+                width: 100%;
+                height: 100%;
+                resize: none;}
         }
 
         button {margin: 5px 0;}
@@ -250,6 +253,47 @@ $star-inactive : rgb(115, 115, 0);
 
         .block2 {
             
+        }
+
+        .evaluation {
+            margin-top: 50px;
+    
+            .text {
+                font-size: 1.2em;
+            }
+
+    
+            .eval-input-text {
+                height: 200px;
+                width: 90%;
+    
+                textarea {height: 100%;  resize: none;}
+            }
+    
+            button {margin: 5px 0;}
+    
+        }
+    
+        .comments {
+    
+            button {
+                margin-bottom: 10px;
+            }
+    
+            margin: 20px 0;
+            width: 50%;
+    
+            .comment {
+                border-radius: 5px;
+                margin-bottom: 15px;
+                padding: 20px;
+                background-color: rgb(234, 234, 234);
+            }
+    
+            .comment:nth-child(2n+1) {
+                background-color: rgb(247, 247, 247);
+            }
+    
         }
 
 
