--- a/src/app/pages/product-list/product-list.component.scss
+++ b/src/app/pages/product-list/product-list.component.scss
@@ -9,9 +9,11 @@ $light-grey: #dedede;
 
     .filter-part {
 
-        button {color: $marine-color !important;}
+        button {
+            color: $marine-color  !important;
+        }
 
-        > .title {
+        >.title {
             border-bottom: 1px solid grey;
             font-size: 1.3em;
             padding-bottom: 10px;
@@ -23,7 +25,8 @@ $light-grey: #dedede;
             font-size: 1.1em;
 
 
-            .language-filter, .number-page-filter {
+            .language-filter,
+            .number-page-filter {
                 padding-top: 10px;
                 padding-bottom: 10px;
                 margin-bottom: 15px;
@@ -36,7 +39,7 @@ $light-grey: #dedede;
                     padding-bottom: 5px;
                     margin-bottom: 0;
 
-                    > button > span {
+                    >button>span {
                         margin-right: 10px;
                     }
                 }
@@ -45,7 +48,9 @@ $light-grey: #dedede;
                     p {
                         margin: 5px 0;
 
-                        &:last-child {margin: 0;}
+                        &:last-child {
+                            margin: 0;
+                        }
 
                         .number_items {
                             color: grey;
@@ -56,7 +61,7 @@ $light-grey: #dedede;
 
                 }
 
-            } 
+            }
 
             .erase-filters-btn {
                 margin-top: 30px;
@@ -72,82 +77,83 @@ $light-grey: #dedede;
 
 
     .product-list-part {
-        
-        .product-list-container {
+
+        .product-list-part {
 
             padding: 0;
             margin-left: 200px;
             width: 80%;
 
 
-            > .title {
+            >.title {
                 margin-bottom: 30px;
                 font-weight: bold;
                 font-size: 2em;
                 color: $marine-color;
                 font-family: 'ABeeZee', sans-serif
             }
-    
+
             .container-product {
                 margin-bottom: 60px;
                 padding-bottom: 10px;
                 border-bottom: 1px solid grey;
-    
+
                 .product {
-    
+
                     width: 600px;
                     height: 300px;
-    
+
                     .img-container {
                         width: 200px;
                         height: 300px;
                         overflow: hidden;
                         // background-color: beige
-    
+
                         img {
                             width: 200px;
                             height: 300px;
                             object-fit: contain;
                         }
                     }
-        
+
                     .infos {
                         padding-left: 30px;
                         flex-grow: 1;
-        
+
                         >.title {
                             font-size: 1.5em;
                         }
-        
+
                         .contributor-container {
                             color: $marine-color;
                             font-size: 1.2em;
-        
+
                             .contributor-name {
                                 font-style: italic;
                             }
                         }
-        
+
                         .evaluation {
                             margin-bottom: 10px;
+
                             .number-stars {
                                 width: 150px;
                             }
-        
+
                             .number-evaluation {
                                 color: $marine-color;
                                 font-size: 1.0em;
                                 position: relative;
                                 bottom: -2px;
                             }
-        
+
                             i {
                                 font-size: 1.5em;
                                 color: rgb(225, 225, 0);
                             }
-        
+
                         }
-        
+
                         .publication-date {
                             color: grey;
                             font-size: 0.8em;
@@ -158,31 +164,76 @@ $light-grey: #dedede;
                             color: $marine-color;
                             font-size: 0.9em;
                         }
-        
+
                         .bottom-block {
                             margin-top: auto;
-    
+
                             i {
                                 font-size: 3em;
                                 color: #4689ef;
                             }
                         }
-        
+
                     }
-        
+
                 }
-    
-    
+
+
             }
-    
+
 
 
         }
 
 
 
-    } 
+    }
+}
 
+
+
+
+// RESPONSIVE PART
+@media (max-width:800px) {
+
+
+    .product-list-container {
+
+        padding: 70px 0;
+    
+    
+        .product-list-part {
+    
+            .product-list-part {
+    
+                margin-top: 100px;
+                padding: 0;
+                margin-left: 0;
+                width: 100%;
+    
+    
+                >.title {
+                    margin-bottom: 30px;
+                    font-weight: bold;
+                    font-size: 2em;
+                    color: $marine-color;
+                    font-family: 'ABeeZee', sans-serif
+                }
+    
+                .container-product {
+                    margin-bottom: 60px;
+                    padding-bottom: 10px;
+                    border-bottom: 1px solid grey;
+    
+                    .product {
+    
+                        width: 100%;
+                        height: 300px;
+                    }
+                }
+            }
+        }
+    }
 
 
 
